Bug 1414336 - Don't fire pointercancel when content prevents default on touchstart. r=kats.

MozReview-Commit-ID: LWPI415MV2F